--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
   },
   "homepage": "https://github.com/pedrozulian/api-memorize#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "sequelize": "^6.6.4",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.9",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.3"
   }
 }
