--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "sequelize": "^6.6.4",
-    "sequelize-cli": "^6.2.0"
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.4"
   },
   "devDependencies": {
     "jest": "^27.0.6",
     "nodemon": "^2.0.9",
     "sqlite3": "^5.0.2",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "sequelize-cli": "^6.2.0"
   }
 }
