feat(package.json): configuração p rodar test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API para a aplicação web Memorize.",
   "main": "index.js",
   "scripts": {
+    "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
