--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.4"
